--- a/angular.json
+++ b/angular.json
@@ -130,6 +130,10 @@
               "devServerTarget": "mdb-angular-free:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
